# solark-cloud-ha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml
.devcontainer/: .devcontainer.postcreate.sh  catalog-entry.json  devcontainer-functions.sh  devcontainer.json  fix-line-endings.py  postcreate-wrapper.sh  project-setup.sh
.devcontainer/nix-family-os/: README.md  tinyproxy-daemon.sh  tinyproxy.conf.template
.devcontainer/wsl-family-os/: README.md  tinyproxy-daemon.sh
.githooks/: pre-push
.github/workflows/: ci.yml
custom_components/solark_cloud/: __init__.py  api_client.py  config_flow.py  const.py  coordinator.py  sensor.py  strings.json
custom_components/solark_cloud/www/: solark-energy-card.js
docker/: docker-compose.ha.yml
docker/ha-config/: configuration.yaml
scripts/: sync-to-ha.sh
src/custom_components/solark_cloud/: __init__.py  api_client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  services.yaml  strings.json
src/custom_components/solark_cloud/core/: interfaces.py
src/custom_components/solark_cloud/translations/: en.json
src/custom_components/solark_cloud/www/: solark-energy-card.js
tests/: conftest.py
tests/unit/: test_api_client.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_interfaces.py  test_sensor.py  test_service.py
